--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+Assets/Plugins/Horizon[ON]/Materials/Textures _ Maps/Mountains/Horizon[ON] Mountains_Albedo.psd
