--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
 Library/metadata
-
+Library/PackageCache
+Library/ShaderCache
+Library/cache
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
